tests/specs/export_default_expr.txt
# mod.ts
export default "foo";

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export default "foo";
  | ^

# output.txt
Defined in file:///mod.ts:1:1

var default: "foo"


# output.json
[
  {
    "kind": "variable",
    "name": "default",
    "isDefault": true,
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "variableDef": {
      "tsType": {
        "repr": "foo",
        "kind": "literal",
        "literal": {
          "kind": "string",
          "string": "foo"
        }
      },
      "kind": "var"
    }
  }
]
